<resources>

    <string name="app_name">Retro High Score</string>
    <string name="addButtonText">Add game</string>
    <string name="saveGameButton"><![CDATA[Save Game & Score]]></string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="splashText">
        0 REM This app is designed to track your high scores from retro games
        \n\n1 REM It is useful especially for playing on real old computers and consoles,
        \n\n2 REM as often such software does not allow any other way to save your high score
        \n\n10 PRINT \u0022Play your retro game\u0022
        \n\n20 PRINT \u0022get a HIGH SCORE\u0022
        \n\n30 INPUT \u0022Add a game and high score\u0022; GAME$, SCO%
        \n\n40 REM You can add optional note and picture of title screen
        \n\n50 PRINT \u0022Play again and beat your HIGH SCORE\u0022
        \n\n60 INPUT \u0022Update your HIGH SCORE\u0022; SCO%
        \n\n70 GOTO 50

    </string>

    <string name="aboutText">
        Thank you for using this app
        \n\nIt is made by retro games enthusiast for enthusiasts
        \n\nHope you liked it
        \n\nFrabi
    </string>

    <string name="aboutEmail">
        If you have any suggestions how to make it better please send them to
        \n\nfrabidev@gmail.com
</string>



    <string name="aboutReview"><![CDATA[If you like this app please review it in <br><br><b><u>PLAY STORE</u></b><br>]]></string>

    <string name="firstTimeAddingText">Add first game</string>
    <string name="aboutOKButtonText">OK</string>
    <string name="addGameHint">game name</string>
    <string name="addScoreHint">high score</string>
    <string name="AddNoteHint">optional note</string>
    <string name="addLastUpdateText">last update</string>
    <string name="addUpdateButtonText">Update</string>
    <string name="addDeleteButtonText">Delete</string>
    <string name="addPhotoDescription">photo of selected game</string>
    <string name="addTakePhotoButtonText">Take a photo</string>
    <string name="searchTextHint">name of game</string>
    <string name="buttonSearchText">SEARCH</string>
    <string name="sortButtonText">SORT</string>
    <string name="addGameButtonText">Add new game</string>
    <string name="rightArrowDescription">Right arrow</string>
    <string name="sortingMethodText">Selected sorting method</string>
    <string name="noSortingText">No sorting</string>
    <string name="sortByNameText">Sort by name</string>
    <string name="sortByLastUpdateText">Sort By Last Update</string>
    <string name="sortingOKButtonText">OK</string>
    <string name="photoOfGameDescription">photo of given game</string>
    <string name="deleteWarningText">"Whole database will be permanently deleted. "</string>
    <string name="deleteAysText">Are you sure ?</string>
    <string name="deleteAllButtonText">DELETE ALL</string>
    <string name="CancelDeleteAllButton">Cancel</string>
    <string name="about_app">About app</string>
    <string name="instructions">Instructions</string>
    <string name="review_app">Review App</string>
    <string name="clear_database">Clear database</string>
    <string name="rate">Rate</string>
    <string name="commodore_64_computer">Commodore 64 computer</string>
    <string name="ok">OK</string>
    <string name="camera_access">Please allow camera access</string>
</resources>